# flying-snake

./: .gitignore  Cargo.toml  README.md  project_structure.md
src/: main.rs
src/api/: mod.rs
src/config/: settings.rs
src/handlers/: mod.rs  now_playing.rs  weather.rs
src/services/: mod.rs  spotify.rs  token_manager.rs  weather_service.rs
src/utils/: config.rs
