[package]
name = "flying-snake"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"         # For building the REST API
serde = { version = "1.0", features = ["derive", "serde_derive"] } # For JSON serialization/deserialization
reqwest = { version = "0.12.9", features = ["json"] }        # For HTTP requests to fetch weather data
tokio = { version = "1", features = ["full"] }    # For async runtime
dotenv = "0.15.0"
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1.0.133"